force-app/main/default/objects/LEA_Test__c/LEA_Test__c.object-meta.xml
<CustomObject>
    <label>LEA Test</label>
    <nameField>
        <label>LEA Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LEA Tests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>