force-app/main/default/objects/LEA_Test__c/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LEA Tests (Distributor Account)</relationshipLabel>
    <relationshipName>LEA_Tests1</relationshipName>
    <type>Lookup</type>
</CustomField>