force-app/main/default/objects/LEA_Test__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LEA Tests</relationshipLabel>
    <relationshipName>LEA_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>