force-app/main/default/objects/LEA_Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Distributor_Account__c</columns>
    <columns>Distributor_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>